2003-09-12  Derek Price  <derek@ximbiot.com>

	* NEWS: Move last blurb into an item with more detail.

2003-09-12  Derek Price  <derek@ximbiot.com>

	* NEWS: Add the recent checkoutlist fix as "Other miscellaneous
	bug fixes."

2003-09-08  Derek Price  <derek@ximbiot.com>

	* NEWS: Note removal of the workaround for a bug in GLIBC prior to
	GLIBC 2.0.7 and advise upgrading GLIBC rather than depending on silly
	hacks that don't fix other programs installed on the system.

2003-08-29  Derek Price  <derek@ximbiot.com>

	* NEWS: Note removal of CVSROOT/editinfo functionality.

2003-08-29  Derek Price  <derek@ximbiot.com>

	* NEWS: Remove typo in recent getpass() note.

2003-08-27  Larry Jones  <lawrence.jones@eds.com>

	* NEWS: Note client/server messages have real command name, client/
	server updates get logged in history file, history file has "P"
	record type.

2003-08-19  Derek Price  <derek@ximbiot.com>

	* HACKING (Portability): Add further comments about which headers we
	can use.

2003-08-12  Derek Price  <derek@ximbiot.com>

	* aclocal.m4, configure: Regenerated.

2003-07-31  Derek Price  <derek@ximbiot.com>

	* configure.in: Call the newly prescribed gl_FUNC_GETPASS_GNU rather
	than the internal gl_PREREQ_GETPASS.
	* srclist.txt ($GNULIB/modules/getpass): Rename to...
	($GNULIB/modules/getpass-gnu): ...this new module.
	* aclocal.m4, configure: Regenerated.
	
2003-07-29  Derek Price  <derek@ximbiot.com>

	* configure.in: Replace my recent misuse of AH_VERBATIM with a call to
	AC_DEFINE.
	* config.h.in, configure: Regenerated.
	
2003-07-29  Derek Price  <derek@ximbiot.com>

	* configure.in: Do not check for getpassphrase.  Define `getpass' to
	`cvs_getpass' in config.h to avoid conflicts with system decls.
	* srclist.txt ($GNULIB/modules/getpass): New entry.
	* NEWS: Note use of GNULIB getpass.

	* config.h.in, configure: Regenerated.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* INSTALL: Note --without-gssapi required to configure on OS X.
