@@ -220,6 +220,12 @@ suspected cause is that one of the calls to sleep_past() is being called with
 an incorrect value, though this does not explain why symptoms have only been
 noticed under BSDI.
 
+* Spaces in arguments to `cvs diff' are currently split on spaces and tabs
+before being passed to diff.  This can often cause diff to abort since it can
+no longer interpret its options string and if it can, coincidentally,
+interpret its option string, then the problem may be output in unexpected
+formats.
+
 * Status
 
   This experimental version of CVS contains new features which may not have
