@@ -1,3 +1,7 @@
+2003-09-26  Derek Price  <derek@ximbiot.com>
+
+	* diff.c (diff): Add a FIXME re spaces in diff arguments.
+
 2003-09-25  Mark D. Baushke  <mdb@cvshome.org>
 
 	* rcs.c (make_file_label): Do not return an uninitialized label.
