@@ -1,3 +1,7 @@
+2003-09-26  Derek Price  <derek@ximbiot.com>
+
+	* BUGS: Note bug in options passed to diff via `cvs diff'.
+
 2003-09-12  Derek Price  <derek@ximbiot.com>
 
 	* NEWS: Move last blurb into an item with more detail.
